--- a/src/pages/HeaderPages/ConsolesPage/ConsolesList/ConsolesPage.module.css
+++ b/src/pages/HeaderPages/ConsolesPage/ConsolesList/ConsolesPage.module.css
@@ -112,6 +112,41 @@
   background: #0F7C10;
 }
 
+.filter {
+  position: relative;
+  display: flex;
+  left: 1349px;
+  bottom: 23.4%;
+  align-items: center;
+}
+
+.sort_text {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+  position: relative;
+  margin-right: 8px;
+  color: #F9F9F9;
+  font-size: 15px;
+}
+
+.selector_text {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+  position: relative;
+  margin-right: 64px;
+  color: #F9F9F9;
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.table_icon {
+  margin-right: 12px;
+}
+
 .price_range {
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -165,6 +200,58 @@ input[type=range]::-moz-range-progress {
 
 input[type=range]::-moz-range-track {
   background-color: #FFFFFF;
+}
+
+.cards_block {
+  position: relative;
+  width: 1360px;
+  height: 1850px;
+  left: 280px;
+  top: 299px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  position: relative;
+  min-width: 453px;
+  height: 370px;
+  justify-content: center;
+  text-align: left;
+  top: 20px;
+  background: white;
+  transition: 0.8s;
+}
+.card:hover {
+  transform: scale(1.1);
+}
+
+.card_description {
+  display: flex;
+  flex-direction: column;
+  width: 324px;
+  height: 44px;
+  margin-left: 38px;
+  top: 20px;
+}
+
+.card_name {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+  position: relative;
+  font-size: 17px;
+}
+
+.card_price {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+  position: relative;
+  font-size: 17px;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=ConsolesPage.module.css.map */
