--- a/src/components/Layout/header/header.module.scss
+++ b/src/components/Layout/header/header.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   position: fixed;
-  width: 1920px;
+  width: 100%;
   height: 100px;
   right: 0;
   top: 0;
