--- a/src/pages/HeaderPages/ConsolesPage/ConsolesList/Table/TableStyles.module.css
+++ b/src/pages/HeaderPages/ConsolesPage/ConsolesList/Table/TableStyles.module.css
@@ -72,4 +72,39 @@
   bottom: 70px;
 }
 
+.pagination {
+  position: absolute;
+  display: flex;
+  width: 1920px;
+  height: 46px;
+  left: 0;
+  top: 2187px;
+  justify-content: center;
+  align-items: center;
+}
+
+.page {
+  gap: 20px;
+  width: 220px;
+  height: 26px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+  position: relative;
+  font-weight: 400;
+  font-size: 15px;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+
+.simple_elem {
+  text-decoration: none;
+}
+.simple_elem:hover {
+  color: #0F7C10;
+  text-decoration: underline;
+}
+
 /*# sourceMappingURL=TableStyles.module.css.map */
