--- a/src/pages/HeaderPages/ConsolesPage/ConsolesList/Table/TableStyles.module.scss
+++ b/src/pages/HeaderPages/ConsolesPage/ConsolesList/Table/TableStyles.module.scss
@@ -61,3 +61,34 @@
   font-weight: bold;
   bottom: 70px;
 }
+
+.pagination{
+  position: absolute;
+  display: flex;
+  width: 1920px;
+  height: 46px;
+  left: 0;
+  top: 2187px;
+  justify-content: center;
+  align-items: center;
+}
+
+.page{
+  gap: 20px;
+  width: 220px;
+  height: 26px;
+  @include main_text_styles;
+  font-weight: 400;
+  font-size: 15px;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+
+.simple_elem{
+  text-decoration: none;
+  &:hover{
+    color: #0F7C10;
+    text-decoration: underline;
+  }
+}
