--- a/src/pages/HeaderPages/ContactPage/ContactPage.module.css
+++ b/src/pages/HeaderPages/ContactPage/ContactPage.module.css
@@ -1,25 +1,38 @@
+.main_content {
+  display: flex;
+  flex-flow: row-reverse;
+}
+
 .mapImage {
-  position: absolute;
   width: 785px;
   height: 600px;
-  left: 855px;
-  top: 100px;
+  display: block;
+  margin-top: 50px;
+  margin-left: 20px;
+}
+
+.map_images {
+  position: relative;
+  display: inline-block;
+}
+
+.main_text {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
 }
 
 .logo {
-  position: absolute;
   width: 74px;
   height: 74px;
-  left: 1325px;
-  top: 371px;
+  position: absolute;
+  left: 480px;
+  bottom: 278px;
 }
 
 .text_1 {
-  position: absolute;
   width: 555px;
   height: 143px;
-  left: 280px;
-  top: 150px;
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -40,15 +53,14 @@
   font-style: normal;
   font-weight: 500;
   line-height: 130%;
+  margin-top: 10px;
+  font-weight: 400;
   font-size: 20px;
 }
 
 .contacts_2 {
-  position: absolute;
   width: 477.58px;
   height: 195px;
-  left: 280px;
-  top: 323px;
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -59,10 +71,10 @@
   font-style: normal;
   font-weight: 500;
   line-height: 130%;
-  font-size: 17px;
   display: flex;
-  margin-top: 0;
-  margin-bottom: 8px;
+  margin-top: 30px;
+  font-weight: 400;
+  font-size: 17px;
 }
 
 .description_2 {
@@ -73,7 +85,20 @@
   display: flex;
   color: #0F7C10;
   font-size: 20px;
-  margin-top: 3px;
+  font-weight: 400;
+  margin-top: 5px;
+}
+
+.description_2_phone {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+  display: flex;
+  font-weight: 400;
+  margin-top: 5px;
+  color: #0F7C10;
+  font-size: 17px;
 }
 
 /*# sourceMappingURL=ContactPage.module.css.map */
