--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,6 +1,9 @@
 .container {
   min-height: calc(100vh - 247px);
+  margin-left: 280px;
+  margin-top: 100px;
   position: relative;
+  display: flex;
 }
 
 .xbox_1 {
@@ -19,9 +22,6 @@
   font-size: 17px;
   line-height: 20px;
   color: #000000;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
   text-decoration: none;
 }
 .linksText:hover {
