--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -9,9 +9,6 @@
   font-size: 17px;
   line-height: 20px;
   color: #000000;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
   text-decoration: none;
 
   &:hover{
@@ -22,7 +19,10 @@
 }
 .container{
   min-height: calc(100vh - 247px);
+  margin-left: 280px;
+  margin-top: 100px;
   position: relative;
+  display: flex;
 }
 .xbox_1{
   position: absolute;
