--- a/src/components/Layout/footer/footer.module.scss
+++ b/src/components/Layout/footer/footer.module.scss
@@ -1,3 +1,11 @@
+@mixin main_text_style{
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 130%;
+}
+
 .footer{
   width: 100%;
   height: 247px;
@@ -5,67 +13,55 @@
   bottom: 0;
   background: #FFFFFF;
   margin-top: auto;
-  flex-grow: 1;
+  display: flex;
 }
 
 .leftTitle{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0;
   gap: 20px;
-  position: absolute;
-  left: 14.58%;
-  right: 62.5%;
-  top: 20.24%;
-  bottom: 47.77%;
-
-  .xbox_2{
-    position: absolute;
-    left: 46.09%;
-    right: 46.09%;
-    top: 30%;
-    bottom: 30%;
-  }
+  margin-top: 50px;
+  margin-left: 280px;
+  width: 440px;
 }
 
 .date{
+  @include main_text_style;
   width: 440px;
   height: 19px;
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 130%;
   color: #000000;
-  flex: none;
-  order: 1;
-  flex-grow: 0;
   text-align: left;
 }
 
 .rightTitle{
-  position: absolute;
-  left: 44.53%;
-  right: 20.57%;
-  top: 20.24%;
-  bottom: 20.24%;
+  margin-top: 50px;
   flex-direction: row;
   display: flex;
+  margin-left: 135px;
+}
+.footerLinksBlock{
+  width: 210px;
+  flex-direction: column;
+  display: flex;
+  text-align: left;
+}
+.footerLinksBlock_1{
+  @include main_text_style;
+  font-weight: 500;
+  font-size: 17px;
+  margin-bottom: 10px;
+}
 
-  .footerLinksBlock{
-    width: 210px;
-    flex-direction: column;
-    display: flex;
-    text-align: left;
-
-    .footerLinksBlock_1{
+.links_text{
+    @include main_text_style;
+    width: auto;
+    color: #000000;
+    text-decoration: none;
+    margin-top: 5px;
+    &:hover{
+      text-decoration: green underline;
       font-weight: bold;
-      font-size: 17px;
-      line-height: 130%;
-      font-family: 'Roboto', sans-serif;
-      margin-bottom: 10px;
+      color: darkgreen;
     }
-  }
-
 }
