--- a/src/pages/HeaderPages/ConsolesPage/ConsolesList/Table/TableStyles.module.css
+++ b/src/pages/HeaderPages/ConsolesPage/ConsolesList/Table/TableStyles.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 1360px;
   height: 1850px;
-  left: 280px;
+  margin-left: 280px;
   top: 299px;
   display: flex;
   flex-wrap: wrap;
@@ -14,12 +14,13 @@
   height: 370px;
   justify-content: center;
   text-align: left;
-  top: 20px;
+  margin-top: 20px;
   background: white;
   transition: 0.8s;
 }
 .card:hover {
   transform: scale(1.1);
+  z-index: 99;
 }
 
 .card_description {
