--- a/src/pages/HeaderPages/ConsolesPage/ConsolesList/Table/TableStyles.module.scss
+++ b/src/pages/HeaderPages/ConsolesPage/ConsolesList/Table/TableStyles.module.scss
@@ -9,7 +9,7 @@
   position: relative;
   width: 1360px;
   height: 1850px;
-  left: 280px;
+  margin-left: 280px;
   top: 299px;
   display: flex;
   flex-wrap: wrap;
@@ -21,11 +21,12 @@
   height: 370px;
   justify-content: center;
   text-align: left;
-  top: 20px;
+  margin-top: 20px;
   background: white;
   transition: 0.8s;
   &:hover{
     transform: scale(1.1);
+    z-index: 99;
   }
 }
 
