--- a/src/pages/HeaderPages/HomePage/HomePage.module.css
+++ b/src/pages/HeaderPages/HomePage/HomePage.module.css
@@ -1,35 +1,27 @@
 .mainContainer {
-  position: relative;
   width: 1920px;
-  height: 3200px;
-  top: 100px;
   background: #F9F9F9;
-  left: 280px;
 }
 
 .mainContainer_first {
-  position: absolute;
-  width: 1360px;
-  height: 750px;
+  display: flex;
+  flex-direction: row;
 }
 
 .title_image {
-  position: absolute;
   width: 555px;
   height: 555px;
-  left: 805px;
-  top: 81px;
+  margin-left: 20px;
+  margin-top: 81px;
+  padding-bottom: 114px;
 }
 
 .title_left_block {
   display: flex;
   flex-direction: column;
   text-align: left;
-  position: relative;
+  padding-left: 115px;
   width: 670px;
-  height: 400px;
-  left: 115px;
-  top: 215px;
 }
 
 .title_text_1 {
@@ -45,6 +37,7 @@
   line-height: 130%;
   color: #0F7C10;
   position: relative;
+  margin-top: 237px;
 }
 
 .title_text_2 {
@@ -57,52 +50,36 @@
   height: 84px;
   font-size: 32px;
   color: #000000;
-  position: relative;
   padding-bottom: 60px;
 }
 
 .mainContainer_second {
-  position: absolute;
-  width: 100%;
-  height: 1000px;
-  top: 550px;
-  display: contents;
+  display: flex;
+  flex-flow: wrap;
 }
 
 .first_quads_block {
-  position: absolute;
+  display: inline-flex;
   width: 690px;
-  height: 500px;
-  top: 720px;
-  left: 690px;
-  display: flex;
   flex-flow: wrap;
 }
 
 .second_quads_block {
-  position: absolute;
+  display: inline-flex;
   width: 690px;
-  height: 500px;
-  top: 1220px;
-  margin: 0;
-  display: flex;
   flex-flow: wrap;
 }
 
 .first_monoBlock {
-  position: absolute;
-  width: 690px;
-  height: 500px;
-  top: 720px;
+  display: flex;
   background: #EDEDED;
 }
 
 .monoblock_text_1 {
+  margin-top: 102px;
   display: flex;
   flex-direction: column;
-  left: 50%;
   position: relative;
-  top: 102px;
   width: 298px;
 }
 
@@ -123,34 +100,21 @@
 .monoblock_text_2 {
   display: flex;
   flex-direction: column;
-  position: relative;
   text-align: left;
   width: 230px;
   height: 225px;
-  top: 135px;
-  left: 115px;
 }
 
 .second_monoBlock {
-  position: absolute;
-  width: 690px;
-  height: 500px;
-  left: 690px;
-  top: 1220px;
+  display: flex;
+  flex-direction: row-reverse;
   background: #EDEDED;
 }
 
-.first_monoBlock_image {
-  position: absolute;
+.monoBlock_image {
+  margin-top: 100px;
   width: 320px;
   height: 300px;
-  right: 50%;
-  top: 100px;
-}
-
-.second_monoBlock_image {
-  top: 100px;
-  position: absolute;
 }
 
 .description_text {
@@ -225,6 +189,7 @@
   font-weight: 500;
   line-height: 130%;
   position: relative;
+  margin-top: 135px;
   font-size: 32px;
   color: #0F7C10;
   font-weight: bold;
@@ -253,10 +218,8 @@
 }
 
 .sales_block {
-  position: absolute;
-  height: 350px;
-  width: 100%;
-  top: 1700px;
+  display: flex;
+  flex-direction: row;
 }
 
 .text_sales_1 {
@@ -265,6 +228,7 @@
   font-weight: 500;
   line-height: 130%;
   position: relative;
+  margin-top: 71px;
   font-size: 42px;
   text-align: left;
   font-weight: bold;
@@ -285,22 +249,20 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  top: 75px;
-  left: 115px;
+  margin-left: 115px;
+  width: 555px;
 }
 
 .right_block {
-  position: absolute;
-  top: 75px;
-  left: 580px;
+  display: inline-block;
+  margin-left: 20px;
+  margin-top: 75px;
 }
 
 .popular_games {
   position: relative;
-  width: 100%;
-  height: 611px;
-  top: 2015px;
   display: flex;
+  flex-direction: column;
 }
 
 .popular_text {
@@ -309,16 +271,16 @@
   font-weight: 500;
   line-height: 130%;
   position: relative;
-  width: 555px;
-  height: 55px;
+  margin-left: 115px;
+  margin-top: 50px;
   font-size: 42px;
-  margin-top: 25px;
   font-weight: bold;
+  text-align: left;
 }
 
 .images {
-  position: absolute;
-  top: 90px;
+  display: flex;
+  margin-top: 20px;
 }
 
 .img {
