--- a/src/pages/HeaderPages/ConsolesPage/ConsolesList/ConsolesPage.module.css
+++ b/src/pages/HeaderPages/ConsolesPage/ConsolesList/ConsolesPage.module.css
@@ -1,16 +1,11 @@
 .main_content {
-  position: relative;
-  width: 1920px;
-  height: 2246px;
+  display: flex;
+  flex-direction: column;
 }
 
 .title {
-  position: absolute;
-  width: 1920px;
-  height: 153px;
-  left: 1px;
-  top: 100px;
   display: flex;
+  flex-flow: column;
 }
 
 .title_block {
@@ -21,10 +16,9 @@
   position: relative;
   font-size: 20px;
   color: #878787;
-  width: 225px;
   height: 23px;
-  left: 280px;
-  top: 30px;
+  text-align: left;
+  margin-top: 30px;
 }
 
 .links_text {
@@ -46,12 +40,8 @@
 }
 
 .header_controllers {
-  position: absolute;
   display: flex;
-  width: 1360px;
-  height: 60px;
-  left: 280px;
-  top: 63px;
+  margin-top: 13px;
 }
 
 .text_name {
@@ -62,18 +52,15 @@
   position: relative;
   font-size: 42px;
   height: 55px;
-  font-weight: bold;
-  margin-top: 8px;
 }
 
 .result_text {
-  position: absolute;
+  display: flex;
   width: 325px;
   height: 60px;
-  left: 1135px;
-  text-align: right;
-  display: flex;
   flex-direction: column;
+  text-align: right;
+  margin-left: 710px;
 }
 
 .header_text_2 {
@@ -84,9 +71,7 @@
   position: relative;
   font-size: 20px;
   color: #878787;
-  width: 225px;
   height: 23px;
-  padding-bottom: 8px;
 }
 
 .header_text_3 {
@@ -97,26 +82,20 @@
   position: relative;
   font-size: 20px;
   color: #878787;
-  width: 225px;
   height: 23px;
   color: #000000;
-  font-weight: bold;
 }
 
 .form_block {
-  position: absolute;
-  width: 1920px;
-  height: 46px;
-  left: 0;
-  top: 253px;
+  display: flex;
   background: #0F7C10;
+  height: 46px;
+  flex-direction: row;
+  align-items: center;
 }
 
 .filter {
-  position: relative;
   display: flex;
-  left: 1349px;
-  bottom: 23.4%;
   align-items: center;
 }
 
@@ -126,9 +105,10 @@
   font-weight: 500;
   line-height: 130%;
   position: relative;
-  margin-right: 8px;
   color: #F9F9F9;
   font-size: 15px;
+  margin-left: 723px;
+  margin-right: 8px;
 }
 
 .selector_text {
@@ -137,7 +117,6 @@
   font-weight: 500;
   line-height: 130%;
   position: relative;
-  margin-right: 64px;
   color: #F9F9F9;
   font-size: 17px;
   font-weight: bold;
@@ -145,18 +124,22 @@
 
 .table_enable {
   fill: white;
+  margin-left: 64px;
 }
 
 .table_disable {
   fill: #0E5B0F;
+  margin-left: 64px;
 }
 
 .row_enable {
   fill: white;
+  margin-left: 12px;
 }
 
 .row_disable {
   fill: #0E5B0F;
+  margin-left: 12px;
 }
 
 .price_range {
@@ -165,22 +148,15 @@
   font-weight: 500;
   line-height: 130%;
   position: relative;
-  position: absolute;
-  left: 14.58%;
-  right: 67.4%;
-  top: 21.74%;
-  bottom: 30.43%;
   display: flex;
-  margin-right: 5px;
   color: #F9F9F9;
   font-size: 17px;
+  width: 127px;
 }
 
 .input_style {
   position: relative;
-  display: flex;
-  left: 409px;
-  top: 10px;
+  display: inline-flex;
 }
 
 input[type=range] {
