--- a/src/pages/HeaderPages/ConsolesPage/ConsolesList/Table/TableStyles.module.css
+++ b/src/pages/HeaderPages/ConsolesPage/ConsolesList/Table/TableStyles.module.css
@@ -1,11 +1,8 @@
 .cards_styles {
   position: relative;
-  width: 1360px;
-  height: 1850px;
-  margin-left: 280px;
-  top: 299px;
   display: flex;
   flex-wrap: wrap;
+  width: 1360px;
 }
 
 .card {
@@ -29,7 +26,7 @@
   width: 324px;
   height: 44px;
   margin-left: 38px;
-  top: 20px;
+  margin-top: 20px;
 }
 
 .card_name {
@@ -73,39 +70,9 @@
   bottom: 70px;
 }
 
-.pagination {
-  position: absolute;
-  display: flex;
-  width: 1920px;
-  height: 46px;
-  left: 0;
-  top: 2187px;
-  justify-content: center;
-  align-items: center;
-}
-
-.page {
-  gap: 20px;
-  width: 220px;
-  height: 26px;
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 130%;
-  position: relative;
-  font-weight: 400;
-  font-size: 15px;
-  justify-content: space-between;
-  display: flex;
-  align-items: center;
-}
-
-.simple_elem {
-  text-decoration: none;
-}
-.simple_elem:hover {
-  color: #0F7C10;
-  text-decoration: underline;
+.img_short {
+  width: 370px;
+  height: 230px;
 }
 
 /*# sourceMappingURL=TableStyles.module.css.map */
