--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,6 +1,7 @@
 .container {
   min-height: calc(100vh - 247px);
   margin-left: 280px;
+  margin-right: 280px;
   margin-top: 100px;
   position: relative;
   display: flex;
