--- a/src/pages/HeaderPages/HomePage/HomePage.module.scss
+++ b/src/pages/HeaderPages/HomePage/HomePage.module.scss
@@ -92,6 +92,7 @@
   text-align: left;
   width: 230px;
   height: 225px;
+  margin-left: 115px;
 }
 .second_monoBlock{
   display: flex;
@@ -254,13 +255,22 @@ figcaption{
   font-size: 17px;
   line-height: 20px;
   color: #000000;
-  flex: none;
-  order: 0;
-  flex-grow: 0;
   text-decoration: none;
-
   &:hover{
     text-decoration: green underline;
+    font-weight: bold;
+    color: darkgreen;
+  }
+}
+
+.link_button_style{
+  width: auto;
+  height: 20px;
+  font-size: 17px;
+  line-height: 20px;
+  color: #000000;
+  text-decoration: none;
+  &:hover{
     font-weight: bold;
     color: darkgreen;
   }
