--- a/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.css
+++ b/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.css
@@ -62,4 +62,17 @@
   margin-top: 20px;
 }
 
+.link_button_style {
+  width: auto;
+  height: 20px;
+  font-size: 17px;
+  line-height: 20px;
+  color: #000000;
+  text-decoration: none;
+}
+.link_button_style:hover {
+  font-weight: bold;
+  color: darkgreen;
+}
+
 /*# sourceMappingURL=AccesoriesPage.module.css.map */
