--- a/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.scss
+++ b/src/pages/HeaderPages/AccessoriesPage/AccesoriesPage.module.scss
@@ -81,3 +81,16 @@
   margin-top: 20px;
 }
 //////////////////////////////////////////////////////////////
+
+.link_button_style{
+  width: auto;
+  height: 20px;
+  font-size: 17px;
+  line-height: 20px;
+  color: #000000;
+  text-decoration: none;
+  &:hover{
+    font-weight: bold;
+    color: darkgreen;
+  }
+}
