--- a/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.css
+++ b/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.css
@@ -77,7 +77,7 @@
 
 .left_arrow {
   position: absolute;
-  left: 90px;
+  left: 23px;
   margin-top: 34px;
   width: 20px;
   height: 20px;
@@ -121,13 +121,19 @@
   margin-left: 135px;
 }
 
-.round {
+.round_disable {
+  border: none;
   width: 30px;
   height: 30px;
   border-radius: 50%;
   outline: 2px solid black;
 }
-.round:active {
+
+.round_enable {
+  border: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
   outline: 4px solid #0F7C10;
 }
 
