--- a/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.scss
+++ b/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.scss
@@ -75,7 +75,7 @@
 
 .left_arrow{
   position: absolute;
-  left: 90px;
+  left: 23px;
   margin-top: 34px;
   width: 20px;
   height: 20px;
@@ -112,15 +112,20 @@
   margin-left: 135px;
 }
 
-.round{
+.round_disable{
+  border: none;
   width: 30px;
   height: 30px;
   border-radius: 50%;
   outline: 2px solid black;
+}
 
-  &:active{
-    outline: 4px solid #0F7C10;
-  }
+.round_enable{
+  border: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  outline: 4px solid #0F7C10;
 }
 
 .counter_block{
