--- a/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.css
+++ b/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-flow: column;
   text-align: left;
+  margin-left: 60px;
 }
 
 .title_block {
@@ -42,6 +43,7 @@
 .img_disable {
   width: 164px;
   height: 85px;
+  margin-right: 10px;
 }
 
 .img_enable {
@@ -65,10 +67,16 @@
   display: flex;
   flex-flow: row;
   margin-top: 30px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
 .images_block {
-  flex-flow: column;
+  flex-flow: wrap;
+  display: flex;
+  width: 785px;
+  height: 560px;
+  justify-content: center;
 }
 
 .arrow_row {
@@ -77,8 +85,8 @@
 
 .left_arrow {
   position: absolute;
-  left: 23px;
-  margin-top: 34px;
+  margin-top: 505px;
+  margin-right: 750px;
   width: 20px;
   height: 20px;
 }
@@ -89,7 +97,8 @@
 
 .right_arrow {
   position: absolute;
-  margin-top: 34px;
+  margin-left: 750px;
+  margin-top: 505px;
   width: 20px;
   height: 20px;
 }
@@ -101,6 +110,7 @@
 .card_right_block {
   display: flex;
   flex-flow: column;
+  margin-left: 135px;
 }
 
 .color_block {
@@ -118,7 +128,6 @@
   position: relative;
   font-weight: 400;
   font-size: 20px;
-  margin-left: 135px;
 }
 
 .round_disable {
@@ -143,7 +152,7 @@
   align-items: center;
   gap: 10px;
   margin-top: 42px;
-  margin-left: 135px;
+  margin-right: 60px;
 }
 
 .squad {
@@ -159,7 +168,7 @@
   display: flex;
   flex-flow: row;
   gap: 20px;
-  margin-left: 135px;
+  margin-right: 60px;
   margin-top: 40px;
   align-items: center;
 }
@@ -188,15 +197,15 @@
 
 .button_position {
   display: flex;
-  margin-left: 135px;
+  margin-right: 60px;
   margin-top: 40px;
 }
 
 .description_right_block {
   display: flex;
   margin-top: 65px;
-  margin-left: 135px;
   flex-flow: column;
+  margin-right: 60px;
 }
 
 .description_name_disable {
@@ -261,7 +270,6 @@
   position: relative;
   display: flex;
   width: 440px;
-  margin-left: 135px;
   margin-top: 20px;
   font-weight: 400;
   font-size: 20px;
@@ -272,6 +280,8 @@
   display: flex;
   flex-flow: row;
   margin-top: 30px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
 .left_block {
@@ -325,19 +335,20 @@
   position: relative;
   font-size: 32px;
   font-weight: bold;
+  margin-left: 60px;
 }
 
 .card {
   display: flex;
   flex-flow: column;
   margin-top: 30px;
+  margin-left: 8.5px;
 }
 
 .ad_image {
   display: flex;
   width: 210px;
   height: 210px;
-  margin-left: 8.5px;
 }
 
 .ad_description {
@@ -363,6 +374,35 @@
 .cards {
   display: flex;
   flex-flow: row;
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+.ad_icon_right {
+  position: absolute;
+  margin-top: 150px;
+  margin-left: 1450px;
+  width: 20px;
+  height: 20px;
+}
+.ad_icon_right:hover {
+  border-radius: 50%;
+  border: 1px solid #0F7C10;
+}
+
+.ad_icon_left {
+  position: absolute;
+  margin-top: 150px;
+  width: 20px;
+  height: 20px;
+}
+.ad_icon_left:hover {
+  border-radius: 50%;
+  border: 1px solid #0F7C10;
+}
+
+.ad_arrows {
+  display: contents;
 }
 
 /*# sourceMappingURL=main.module.css.map */
