--- a/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.scss
+++ b/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.scss
@@ -20,6 +20,7 @@
   display: flex;
   flex-flow: column;
   text-align: left;
+  margin-left: 60px;
 }
 .title_block{
   @include gray_text_styles;
@@ -44,6 +45,7 @@
 .img_disable{
   width: 164px;
   height: 85px;
+  margin-right: 10px;
 }
 
 .img_enable{
@@ -63,10 +65,16 @@
   display: flex;
   flex-flow: row;
   margin-top: 30px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
 .images_block{
-  flex-flow: column;
+  flex-flow: wrap;
+  display: flex;
+  width: 785px;
+  height: 560px;
+  justify-content: center;
 }
 
 .arrow_row{
@@ -75,8 +83,8 @@
 
 .left_arrow{
   position: absolute;
-  left: 23px;
-  margin-top: 34px;
+  margin-top: 505px;
+  margin-right: 750px;
   width: 20px;
   height: 20px;
   &:hover{
@@ -86,7 +94,8 @@
 }
 .right_arrow{
   position: absolute;
-  margin-top: 34px;
+  margin-left: 750px;
+  margin-top: 505px;
   width: 20px;
   height: 20px;
   &:hover{
@@ -98,6 +107,7 @@
 .card_right_block{
   display: flex;
   flex-flow: column;
+  margin-left: 135px;
 }
 .color_block{
   display: flex;
@@ -109,7 +119,6 @@
   @include main_text_styles;
   font-weight: 400;
   font-size: 20px;
-  margin-left: 135px;
 }
 
 .round_disable{
@@ -134,7 +143,7 @@
   align-items: center;
   gap: 10px;
   margin-top: 42px;
-  margin-left: 135px;
+  margin-right: 60px;
 }
 
 .squad{
@@ -150,7 +159,7 @@
   display: flex;
   flex-flow: row;
   gap: 20px;
-  margin-left: 135px;
+  margin-right: 60px;
   margin-top: 40px;
   align-items: center;
 }
@@ -169,15 +178,15 @@
 
 .button_position{
   display: flex;
-  margin-left: 135px;
+  margin-right: 60px;
   margin-top: 40px;
 }
 
 .description_right_block{
   display: flex;
   margin-top: 65px;
-  margin-left: 135px;
   flex-flow: column;
+  margin-right: 60px;
 }
 
 .description_name_disable {
@@ -218,7 +227,6 @@
   @include main_text_styles;
   display: flex;
   width: 440px;
-  margin-left: 135px;
   margin-top: 20px;
   font-weight: 400;
   font-size: 20px;
@@ -229,6 +237,8 @@
   display: flex;
   flex-flow: row;
   margin-top: 30px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
 .left_block{
@@ -270,19 +280,20 @@
   @include main_text_styles;
   font-size: 32px;
   font-weight: bold;
+  margin-left: 60px;
 }
 
 .card{
   display: flex;
   flex-flow: column;
   margin-top: 30px;
+  margin-left: 8.5px;
 }
 
 .ad_image{
   display: flex;
   width: 210px;
   height: 210px;
-  margin-left: 8.5px;
 }
 
 .ad_description{
@@ -300,4 +311,33 @@
 .cards{
   display: flex;
   flex-flow: row;
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+.ad_icon_right{
+  position: absolute;
+  margin-top: 150px;
+  margin-left: 1450px;
+  width: 20px;
+  height: 20px;
+  &:hover{
+    border-radius: 50%;
+    border: 1px solid #0F7C10;
+  }
+}
+
+.ad_icon_left{
+  position: absolute;
+  margin-top: 150px;
+  width: 20px;
+  height: 20px;
+  &:hover{
+    border-radius: 50%;
+    border: 1px solid #0F7C10;
+  }
+}
+
+.ad_arrows{
+  display: contents;
 }
