--- a/src/pages/HeaderPages/CartPage/Item/Item.module.css
+++ b/src/pages/HeaderPages/CartPage/Item/Item.module.css
@@ -31,8 +31,8 @@
   position: relative;
   font-weight: bold;
   font-size: 20px;
-  margin-left: 365px;
   width: 116px;
+  margin-left: 140px;
 }
 
 .remove_icon {
@@ -40,6 +40,26 @@
 }
 .remove_icon:hover {
   stroke-opacity: 1;
+}
+
+.counter_block {
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.squad {
+  display: flex;
+  width: 25px;
+  height: 25px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  justify-content: center;
+  align-items: center;
+}
+
+.icons {
+  height: 20px;
 }
 
 /*# sourceMappingURL=Item.module.css.map */
