--- a/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.scss
+++ b/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.scss
@@ -114,6 +114,7 @@
   flex-flow: row;
   align-items: center;
   gap:20px;
+  margin-bottom: 42px;
 }
 .color_text{
   @include main_text_styles;
@@ -135,24 +136,6 @@
   height: 30px;
   border-radius: 50%;
   outline: 4px solid #0F7C10;
-}
-
-.counter_block{
-  display: flex;
-  flex-flow: row;
-  align-items: center;
-  gap: 10px;
-  margin-top: 42px;
-  margin-right: 60px;
-}
-
-.squad{
-  display: flex;
-  width: 25px;
-  height: 25px;
-  border: 1px solid rgba(0,0,0,0.3);
-  justify-content: center;
-  align-items: center;
 }
 
 .prices_text{
