--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -24,7 +24,7 @@
   margin-top: 100px;
   position: relative;
   display: flex;
-  background: #F9F9F9;
+  background: white;
 }
 .xbox_1{
   position: absolute;
