--- a/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.scss
+++ b/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.scss
@@ -193,7 +193,7 @@
   border: none;
   outline: none;
   color: black;
-  background: #F9F9F9;
+  background: white;
   text-decoration: #0F7C10 underline;
 }
 
@@ -203,7 +203,7 @@
   font-size: 20px;
   border: none;
   outline: none;
-  background: #F9F9F9;
+  background: white;
 }
 
 .text_description{
