--- a/src/pages/HeaderPages/ConsolesPage/ConsolesList/ConsolesPage.module.css
+++ b/src/pages/HeaderPages/ConsolesPage/ConsolesList/ConsolesPage.module.css
@@ -106,7 +106,7 @@
   font-weight: 500;
   line-height: 130%;
   position: relative;
-  color: #F9F9F9;
+  color: white;
   font-size: 15px;
   margin-left: 710px;
   margin-right: 8px;
@@ -118,7 +118,7 @@
   font-weight: 500;
   line-height: 130%;
   position: relative;
-  color: #F9F9F9;
+  color: white;
   font-size: 17px;
   font-weight: bold;
 }
