--- a/src/pages/HeaderPages/HomePage/HomePage.module.scss
+++ b/src/pages/HeaderPages/HomePage/HomePage.module.scss
@@ -9,7 +9,7 @@
 
 .mainContainer {
   width: 1920px;
-  background: #F9F9F9;
+  background: white;
 }
 ////////////////////////////////////////
 .mainContainer_first{
@@ -68,7 +68,7 @@
 }
 .first_monoBlock{
   display: flex;
-  background: #EDEDED;
+  background: white;
 }
 .monoblock_text_1{
   margin-top: 102px;
@@ -97,7 +97,7 @@
 .second_monoBlock{
   display: flex;
   flex-direction: row-reverse;
-  background: #EDEDED;
+  background: white;
 }
 .monoBlock_image{
   margin-top: 100px;
