--- a/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.css
+++ b/src/pages/HeaderPages/ConsolesPage/Consoles/Xbox Wireless Controller/main.module.css
@@ -226,7 +226,7 @@
   border: none;
   outline: none;
   color: black;
-  background: #F9F9F9;
+  background: white;
   text-decoration: #0F7C10 underline;
 }
 
@@ -242,7 +242,7 @@
   font-size: 20px;
   border: none;
   outline: none;
-  background: #F9F9F9;
+  background: white;
 }
 
 .text_description {
